--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
             <version>${projectlombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+            <version>4.3</version>
+        </dependency>
     </dependencies>
 
 </project>
